<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"	>
    <TextView 
    	android:text="@string/welcome" 
    	android:layout_height="wrap_content" 
    	android:textSize="@dimen/smallFont" 
    	android:layout_width="wrap_content" 
    	android:layout_gravity="center"/>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/appName"
		android:textSize="@dimen/bigFont"
		android:layout_gravity="center"
		android:paddingBottom="40sp"/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/start"
		android:id="@+id/startButton"
		android:textSize="@dimen/smallFont"/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/base"
		android:id="@+id/baseButton"
		android:textSize="@dimen/smallFont"/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/options"
		android:id="@+id/optionsButton"		
		android:textSize="@dimen/smallFont"/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/exit"
		android:id="@+id/exitButton"
		android:textSize="@dimen/smallFont"/>
</LinearLayout>
