<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"	
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:background="#eeeeee">
	
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/originalWord" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="I just want to be your everything"
			android:textSize="@dimen/smallFont"
			android:id="@+id/word1"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/translatedWord" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Ja po prostu chcę być dla Ciebie wszystkim"
			android:textSize="@dimen/smallFont"
			android:id="@+id/word2"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/goodAnswersCount" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="2"
			android:textSize="@dimen/smallFont"
			android:id="@+id/good"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/badAnswersCount" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="4"
			android:textSize="@dimen/smallFont"
			android:id="@+id/bad"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/allAnswersCount" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="6"
			android:textSize="@dimen/smallFont"
			android:id="@+id/allAnswers"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rate" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="33%"
			android:textSize="@dimen/smallFont"
			android:id="@+id/rate"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/level" 
			android:layout_weight="1"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="2"
			android:textSize="@dimen/smallFont"
			android:id="@+id/level"
			android:textStyle="bold"			
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TableRow>
</TableLayout>
