<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"	
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:background="#eeeeee">
	
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/originalWord" 
			android:layout_weight="1"/>
		<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"		
			android:id="@+id/word1"					
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/translatedWord" 
			android:layout_weight="1"/>
		<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"			
			android:id="@+id/word2"				
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/goodAnswersCount" 
			android:layout_weight="1"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"			
			android:id="@+id/good"
			android:numeric="integer"						
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/badAnswersCount" 
			android:layout_weight="1"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"			
			android:id="@+id/bad"		
			android:numeric="integer"											
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/level" 
			android:layout_weight="1"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="1"
			android:numeric="integer"			
			android:id="@+id/level"
			android:layout_weight="100"/>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#000000"
		android:layout_marginBottom="1sp">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="OK" 
			android:layout_weight="1"
			android:id="@+id/okClicked"/>		
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TableRow>
</TableLayout>
